--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -17,3 +17,5 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+          plugin_stars: yes
+          plugin_stars_limit: 10
